code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_table_15.wast
(assert_invalid
  (module
    (func $type-arg-index-empty-in-return
      (block (result i32)
        (return (br_table 0))
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)